--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,250 @@
-.App {
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.background {
+  background-image: url("./assets/Background.svg");
+  position: absolute;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+/* 
+.memory {
+  position: absolute;
+  width: 184px;
+  height: 40px;
+  left: 628px;
+  top: 32px;
+
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40.187px;
+  line-height: 40px;
+
+  letter-spacing: 0.0882153px;
+
+  color: #FFFFFF;
+} */
+
+.play {
+  width: 601px;
+  height: 24px;
+
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 24px;
   text-align: center;
+  letter-spacing: 0.18px;
+  color: #FFFFFF;
+
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 2fr 1fr 6fr 1fr 2fr;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box1 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  background-color: transparent;
+  justify-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box2 {
+  display: grid;
+  grid-column: 1/3;
+  grid-row: 2/3;
+  background-color: transparent;
+  justify-items: center;
+}
+
+.box3 {
+  display: grid;
+  grid-column: 1/2;
+  grid-row: 3/4;
+  background-color: transparent;
+  justify-items: center;
+  align-items: center;
+}
+
+.box4 {
+  padding-top: 5%;
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  background-color: transparent;
+  justify-items: center;
+  align-items: center;
+}
+
+.box5 {
+  display: grid;
+  grid-column: 1/3;
+  grid-row: 4/5;
+  background-color: transparent;
+  justify-items: center;
+}
+
+
+
+.box6 {
+  background-color: transparent;
+  border: 1px solid black;
+}
+
+.box7 {
+  background-color: transparent;
+  border: 1px solid black;
+}
+
+.item {
+  background-color: black;
+  border: 1px solid white;
+}
+
+.exit-button {
+  display: grid;
+  flex-direction: row;
+  align-items: start;
+  padding: 16px;
+  gap: 10px;
+  width: 132px;
+  height: 62px;
+  background: #D4190C;
+  border-radius: 8px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  border: 0;
+}
+
+.right {
+  padding-top: 1%;
+  padding-right: 1%;
+  display: grid;
+  justify-content: right;
+
+}
+
+.button-text {
+  width: 100px;
+  height: 30px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+
+  /* identical to box height */
+  letter-spacing: -0.02em;
+  text-transform: capitalize;
+
+  /* Shades / 00 */
+  color: #FFFFFF;
+
+
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.player-name-input {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 12px 16px;
+  gap: 10px;
+  width: 374px;
+  height: 48px;
+  background: #F1F5F9;
+  border-radius: 8px;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.name-input-text {
+  width: 342px;
+  height: 24px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  background: #F1F5F9;
+  flex: none;
+  order: 0;
+  flex-grow: 1;
+  border: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lets-play {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  width: 220px;
+  height: 64px;
+  background: #0AB169;
+  border-radius: 8px;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  border: 0
+}
+
+.lets-play-text {
+  width: 130px;
+  height: 42px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 42px;
+  letter-spacing: -0.02em;
+  text-transform: capitalize;
+  color: #FFFFFF;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.playScreenText {
+  width: 130px;
+  height: 42px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 42px;
+  letter-spacing: -0.02em;
+  text-transform: capitalize;
+  color: #FFFFFF;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
